@@ -91,8 +91,8 @@ export EXTRA_CLASSES :=
 # JDB: Execute a Java class in the debugger.
 # JAVAH: Generate JNI include files from compiled Java code.
 # JAVADOC: Generate documentation from Java sources.
-# IDLTOCPPSERVER: Generate skeleton C++ CORBA server sources from IDL files.
-# IDLTOJAVACLIENT: Generate skeleton Java CORBA client sources from IDL files.
+# IDLTOCPP: Generate skeleton C++ CORBA sources from IDL files.
+# IDLTOJAVA: Generate skeleton Java CORBA sources from IDL files.
 # JADE: Use James' DSSSL Engine to convert from DocBook SGML to other formats.
 # DOCBOOK2MAN: Convert DocBook SGML to man pages.
 # ARCHIVE: Build an archive using $(ARCHIVE) <archive file> <files to include>.
@@ -114,8 +114,8 @@ export JAR := jar
 export JDB := jdb -Xmx64m -Djava.compiler=NONE
 export JAVAH := javah
 export JAVADOC := javadoc -J-Xmx64m
-export IDLTOCPPSERVER := omniidl -bcxx -Wbh=IDL.h -Wbs=SK.cpp
-export IDLTOJAVACLIENT := idlj
+export IDLTOCPP := omniidl -bcxx -Wbh=IDL.h -Wbs=SK.cpp
+export IDLTOJAVA := idlj
 export JADE := jade
 export DOCBOOK2MAN := docbook2man
 export ARCHIVE := tar --ignore-failed-read -zcf
