@@ -1,6 +1,10 @@
 
 Regina - A Normal Surface Theory Calculator
 
+    OVERALL:
+        - Makefile.options variables IDLTOJAVACLIENT and IDLTOCPPSERVER
+          became IDLTOJAVA and IDLTOCPP with slightly more generic meanings.
+
 Version 2.2  [ 7 October, 2001 ]
     OVERALL:
         - Documentation now DocBook-based; generates HTML and man pages.
